# gz-math

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Changelog.md  DOCUMENTATION_IMPROVEMENTS_303.md  MODULE.bazel  Migration.md  Migration.md.bak  README.md  api.md.in  appveyor.yml  bitbucket-pipelines.yml  codecov.yml  colcon.pkg  configure.bat  package.xml  print_package_xml_version.py  tutorials.md.in
.bcr/: metadata.template.json
.github/ci/: after_make.sh  dependencies.yaml  packages-bionic.apt  packages-jammy.apt  packages.apt  packages.brew
.github/ci-bionic/: packages.apt
.github/ci-focal/: after_make.sh
.github/workflows/: bazel.yml  ci-bionic-bazel.yml  ci-bionic.yml  ci.yml  ci_dependencies_from_source.yaml  conda-forge.yml  pr-collection-labeler.yml  publish.yaml
cmake/: SearchForStuff.cmake  ignition-math-config.cmake.in
doc/: header.html  mainpage.html
eigen3/: BUILD.bazel
eigen3/include/gz/math/eigen3/: Conversions.hh  Util.hh
eigen3/include/ignition/math/: eigen3.hh
eigen3/include/ignition/math/eigen3/: Conversions.hh  Util.hh
eigen3/src/: Conversions_TEST.cc  Util_TEST.cc
examples/: BUILD.bazel  CMakeLists.txt  README.md  additively_separable_scalar_field3_example.cc  angle_example.py  angle_example.rb  box_example.cc  box_example.py  color_example.cc  diff_drive_odometry.cc  diff_drive_odometry.py  gauss_markov_process_example.py  gauss_markov_process_example.rb  graph_example.cc  helpers_example.rb  kmeans.py  matrix3_example.rb  matrixx_example.cc  piecewise_scalar_field3_example.cc  polynomial3_example.cc  pose3_example.rb  quaternion_example.rb  quaternion_from_euler.cc  quaternion_to_euler.cc  rand_example.cc  rand_example.py  sphere_example.cc  sphere_example.rb  temperature_example.rb  triangle_example.cc  vector2_example.cc  vector2_example.py  vector2_example.rb  vector2c_example.c  vector3_example.py  vector3_example.rb
include/gz/math/: AdditivelySeparableScalarField3.hh  (+62 more)
src/: AdditivelySeparableScalarField3_TEST.cc  Angle.cc  Angle_TEST.cc  Angle_TEST.py  AxisAlignedBox.cc  AxisAlignedBoxHelpers_TEST.cc  AxisAlignedBox_TEST.cc  Box.cc  Box_TEST.cc  CMakeLists.txt  Capsule_TEST.cc  Color.cc  Color.i  Color_TEST.cc  Color_TEST.py  Cone_TEST.cc  CoordinateVector3.cc  CoordinateVector3_TEST.cc  Cylinder_TEST.cc  DiffDriveOdometry.cc  DiffDriveOdometry_TEST.cc  Edge_TEST.cc  Ellipsoid_TEST.cc  Error.cc  FourwidsDriveOdometry.cc  Frame.cc  FrameException.cc  FrameGraph.cc  FrameGraphPrivate.cc  FrameGraph_TEST.cc  Frame_TEST.cc  Frustum.cc  FrustumPrivate.hh  Frustum_TEST.cc  GaussMarkovProcess.cc  GaussMarkovProcess_TEST.cc  GaussMarkovProcess_TEST.py  Graph.cc  GraphDirected2_TEST.cc  GraphDirected_TEST.cc  (+111 more)
src/graph/: Edge_TEST.cc  GraphAlgorithms_TEST.cc  GraphUndirected_TEST.cc  Graph_TEST.cc
src/python/: AxisAlignedBox.i  AxisAlignedBox_TEST.py  Box_TEST.py  CMakeLists.txt  Color_TEST.py  DiffDriveOdometry.i  Filter.i  Filter_TEST.py  Frustum_TEST.py  Helpers.i  Helpers_TEST.py  Inertial.i  Inertial_TEST.py  Kmeans_TEST.py  Line2.i  Line2_TEST.py  Line3.i  Line3_TEST.py  Material.i  Material_TEST.py  Matrix3.i  Matrix3_TEST.py  Matrix4_TEST.py  MovingWindowFilter.i  MovingWindowFilter_TEST.py  OrientedBox.i  OrientedBox_TEST.py  PID.i  Plane.i  Plane_TEST.py  Pose3_TEST.py  Quaternion.i  Quaternion_TEST.py  SemanticVersion.i  SignalStats.i  SignalStats_TEST.py  SphericalCoordinates.i  SphericalCoordinates_TEST.py  Spline_TEST.py  StopWatch_TEST.py  (+12 more)
src/python_pybind11/: CMakeLists.txt  next
src/python_pybind11/src/: Angle.cc  Angle.hh  AxisAlignedBox.cc  AxisAlignedBox.hh  AxisAlignedBoxHelpers.hh  Box.hh  Capsule.hh  Color.cc  Color.hh  Cone.hh  CoordinateVector3.cc  CoordinateVector3.hh  Cylinder.hh  DiffDriveOdometry.cc  DiffDriveOdometry.hh  Ellipsoid.hh  Filter.cc  Filter.hh  FourwidsDriveOdometry.cc  FourwidsDriveOdometry.hh  Frustum.cc  Frustum.hh  GaussMarkovProcess.cc  GaussMarkovProcess.hh  Helpers.cc  Helpers.hh  Inertial.hh  InterpolationPoint.cc  InterpolationPoint.hh  Interval.cc  Interval.hh  Kmeans.cc  Kmeans.hh  Line2.hh  Line3.hh  MassMatrix3.cc  MassMatrix3.hh  Material.cc  Material.hh  Matrix3.cc  (+63 more)
src/python_pybind11/test/: Angle_TEST.py  AxisAlignedBoxHelpers_TEST.py  AxisAlignedBox_TEST.py  Box_TEST.py  Capsule_TEST.py  Color_TEST.py  Cone_TEST.py  CoordinateVector3_TEST.py  Cylinder_TEST.py  DiffDriveOdometry_TEST.py  Ellipsoid_TEST.py  Filter_TEST.py  Frustum_TEST.py  GaussMarkovProcess_TEST.py  Helpers_TEST.py  Inertial_TEST.py  Interval_TEST.py  Kmeans_TEST.py  Line2_TEST.py  Line3_TEST.py  MassMatrix3_TEST.py  Material_TEST.py  Matrix3_TEST.py  Matrix4_TEST.py  Matrix6_TEST.py  MecanumDriveOdometry_TEST.py  MovingWindowFilter_TEST.py  OccupancyGrid_TEST.py  OrientedBox_TEST.py  PID_TEST.py  Plane_TEST.py  Polynomial3_TEST.py  Pose3_TEST.py  Quaternion_TEST.py  Rand_TEST.py  Region3_TEST.py  RollingMean_TEST.py  RotationSpline_TEST.py  SemanticVersion_TEST.py  SignalStats_TEST.py  (+15 more)
src/ruby/: Angle.i  Angle_TEST.rb  AxisAlignedBox.i  Box.i  CMakeLists.txt  Capsule.i  Color.i  Cone.i  CoordinateVector3.i  CoordinateVector3_TEST.rb  Cylinder.i  DiffDriveOdometry.i  DiffDriveOdometry_TEST.rb  Ellipsoid.i  Frustum.i  Helpers.i  Inertial.i  Kmeans.i  Line2.i  Line3.i  MassMatrix3.i  Material.i  Matrix3.i  OrientedBox.i  PID.i  Plane.i  Pose3.i  Quaternion.i  SemanticVersion.i  Sphere.i  SphericalCoordinates.i  SphericalCoordinates_TEST.rb  Temperature.i  Triangle.i  Triangle3.i  Vector2.i  Vector2_TEST.rb  Vector3.i  Vector3_TEST.rb  Vector4.i  (+2 more)
test/: BUILD.bazel  CMakeLists.txt  interpolation.sh
test/benchmark/: CMakeLists.txt  graph.cc  gz_sim_workload.cc  tree_algorithms.cc
test/gtest_vendor/include/gtest/internal/: gtest-param-util.h
test/integration/: CMakeLists.txt  ExamplesBuild_TEST.cc  deprecated_TEST.cc  win_dirent.h
test/performance/: CMakeLists.txt  graph.cc
tutorials/: angle.md  color.md  cppgetstarted.md  example_angle.md  example_triangle.md  example_vector2.md  installation.md  pythongetstarted.md  rotation.md  rotation_example.md  triangle.md  vector.md
(+108 files in other folders)
