<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-math7</name>
  <version>7.4.0</version>
  <description>Gazebo Math : Math classes and functions for robot applications</description>
  <maintainer email="nate@openrobotics.org">Nate Koenig</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-math</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>
  <build_depend>pybind11-dev</build_depend>

  <depend>eigen</depend>
  <depend>gz-utils2</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
