load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = ["//:license"],
)

license(
    name = "license",
    package_name = "gz-math-examples",
)

example_sources = glob(
    include = [
        "*_example.cc",
    ],
)

[cc_binary(
    name = src.replace(".cc", ""),
    srcs = [src],
    deps = [
        "//:math",
    ],
) for src in example_sources]
